# largo-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: app.rs  command.rs  ledger_file.rs  lib.rs  main.rs  manifesto.rs
tests/: largo.rs  ledger_file.rs
tests/examples/default/: Largo.toml
