[package]
name = "largo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["cargo", "string"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"

[dev-dependencies]
nix = { version = "0.27.1", features = ["process"] }
